objects/ASI_CRM_VN_Bottle_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Bottle Analyses</relationshipLabel>
        <relationshipName>Bottle_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Per_Month__c</fullName>
        <label>Target per Month (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Per_Year_Bottle__c</fullName>
        <formula>( ASI_CRM_Total_Contract_Target__c / ASI_CRM_VN_Contract__r.ASI_CRM_No_Of_Months__c ) * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target per Year (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Contract_Target__c</fullName>
        <formula>ASI_CRM_Target_Per_Month__c * ASI_CRM_VN_Contract__r.ASI_CRM_No_Of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Target (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Allocation_Percentage__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_CRM_VN_Contract__c</referenceTo>
        <relationshipLabel>Bottle Analyses</relationshipLabel>
        <relationshipName>Bottle_Analyses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN CRM SKU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Bottle Analyses</relationshipLabel>
        <relationshipName>Bottle_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bottle Analysis</label>
    <nameField>
        <displayFormat>VNBR-{00000}</displayFormat>
        <label>Bottle Analysis Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bottle Analyses</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Bottle_Analysis</fullName>
        <active>true</active>
        <label>ASI CRM VN Bottle Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Bottle_Analysis_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Bottle Analysis Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>